// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`script-tag.hbs - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["glimmer"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
<script></script>

<script>
   shouldFormat   (   );
</script>

<script type="text/javascript">
   shouldFormat   (   );
</script>

<script type="module">
  import    a   from   "a"   ;
</script>

<script>
  // Shuold not support TLA in script without \`[type="module"]\`
  await shouldNotFormat   (   a   );
</script>

<script type="module">
  await shouldFormat   (   a   );
</script>

<script type="application/ld+json">
  {   "should"   :   "not format" }
</script>

<script>
  shouldNotFormat(   '{{user.name}}' )
  {{#if debug}}shouldNotFormat(   'debug' ){{/if}}
</script>

<script>
  const template = html\`<div><script>shouldFormat   (   )<\\/script></div>\`;
</script>

=====================================output=====================================
<script
  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
></script>
<script></script>

<script>
  shouldFormat   (   );
</script>

<script type="text/javascript">
  shouldFormat   (   );
</script>

<script type="module">
  import    a   from   "a"   ;
</script>

<script>
  // Shuold not support TLA in script without \`[type="module"]\`
  await shouldNotFormat   (   a   );
</script>

<script type="module">
  await shouldFormat   (   a   );
</script>

<script type="application/ld+json">
  {   "should"   :   "not format" }
</script>

<script>
  shouldNotFormat( '{{user.name}}' )
  {{#if debug}}shouldNotFormat( 'debug' ){{/if}}
</script>

<script>
  const template = html\`<div><script>shouldFormat   (   )<\\/script></div>\`;
</script>
================================================================================
`;

exports[`script-tag.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
<script></script>

<script>
   shouldFormat   (   );
</script>

<script type="text/javascript">
   shouldFormat   (   );
</script>

<script type="module">
  import    a   from   "a"   ;
</script>

<script>
  // Shuold not support TLA in script without \`[type="module"]\`
  await shouldNotFormat   (   a   );
</script>

<script type="module">
  await shouldFormat   (   a   );
</script>

<script type="application/ld+json">
  {   "should"   :   "not format" }
</script>

<script>
  shouldNotFormat(   '{{user.name}}' )
  {{#if debug}}shouldNotFormat(   'debug' ){{/if}}
</script>

<script>
  const template = html\`<div><script>shouldFormat   (   )<\\/script></div>\`;
</script>

=====================================output=====================================
<script
  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
></script>
<script></script>

<script>
  shouldFormat();
</script>

<script type="text/javascript">
  shouldFormat();
</script>

<script type="module">
  import a from "a";
</script>

<script>
  // Shuold not support TLA in script without \`[type="module"]\`
  await shouldNotFormat   (   a   );
</script>

<script type="module">
  await shouldFormat(a);
</script>

<script type="application/ld+json">
  {   "should"   :   "not format" }
</script>

<script>
  shouldNotFormat( '{{user.name}}' )
  {{#if debug}}shouldNotFormat( 'debug' ){{/if}}
</script>

<script>
  const template = html\`<div>
    <script>
      shouldFormat();
    <\\/script>
  </div>\`;
</script>
================================================================================
`;
